# friday

./: .env.example  README.md  agent.py  all_agent.py  docker-compose.auto-browser.yml  pyproject.toml  server.py  setup.sh  uv.toml  voice_agent.py  voice_local.py
friday/: config.py  llm.py  tool_registry.py
friday/prompts/: templates.py
friday/resources/: __init__.py  data.py
friday/tools/: __init__.py  auto_browser.py  bash.py  browser.py  desktop.py  firefox.py  homeassistant.py  memory.py  skill_store.py  skills.py  web.py
memory/: brain.md  friday.db  user_profile.md
skills/: auto_browser.md  browser.md  desktop.md  firefox.md  homeassistant.md  memory.md  registry.json  shell.md  system.md  web.md
skills/installed/: auto-browser.md
