[project]
name = "friday-tony-stark-demo"
version = "0.2.0"
description = "Friday — Autonomous AI agent with Telegram, browser, and bash access"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp",
    "httpx",
    "python-dotenv",
    "PyYAML>=6.0",
    # Telegram agent
    "python-telegram-bot>=21.0",
    # Browser automation
    "playwright",
    # Web search (no API key required)
    "ddgs>=9.0",
    # LLM providers
    "openai>=1.0",
    "ollama>=0.3",
    "google-genai>=1.0",
]

[project.optional-dependencies]
# Desktop voice loop (local STT + Coqui TTS — no LiveKit, no cloud API key needed)
voice = [
    "torch>=2.0",           # CPU-only torch; source pinned to pytorch-cpu CDN in uv.toml
    "torchaudio",
    "TTS>=0.22.0",          # Coqui TTS (XTTS-v2, tacotron2, etc.)
    "faster-whisper>=1.0",  # Local Whisper STT
    "sounddevice>=0.4",     # Mic capture + speaker playback
    "soundfile>=0.12",      # WAV I/O
    "numpy>=1.24",          # Audio array processing
    "openwakeword>=0.6.0",  # Optional wake-word detection (hey_jarvis, alexa, etc.)
    "onnxruntime>=1.16",    # ONNX inference backend required by openwakeword
]

[project.scripts]
friday = "server:main"
friday_voice = "voice_agent:run"
friday_agent = "agent:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# CPU-only torch: uses pytorch-cpu CDN to avoid large nvidia-* CUDA downloads.
# Whisper STT and Coqui TTS work fine on CPU for voice assistant workloads.
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]
torchaudio = [{ index = "pytorch-cpu" }]

[tool.hatch.build.targets.wheel]
packages = ["server.py", "agent.py"]
